# scraping_smple

./: pyproject.toml
notebook/: eda.ipynb
