[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
jupyterlab = "^3.2.9"
pandas = "^1.4.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
japanize-matplotlib = "^1.1.3"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
